# oddagent

./: README.en.md  README.md  app.py  compile.bat  compile.py  config.json  config.json.sample  odd_agent_config.py  odd_agent_logger.py  pyproject.toml  setup.cfg  start.bat  start.sh  test_recognize_intent.py
.github/workflows/: sync_to_gitee.yaml
docs/: 20251116 OddAgent 工作流程调整.md
logic/: api_request_composer.py  api_response_paser.py  odd_agent.py  schedule_task.py
modules/: generate_testset.py  module_tool.py
modules/GAB/: GAB.json  GAB_config.py
modules/catherine/: cc.json
modules/xiaoke/: xiaoke.json  xiaoke_config.py
modules/xiaoluo/: xiaoluo.json
oddagent/: README.en.md  odd_agent_config.json
oddagent/logic/: odd_agent.py
oddagent/modules/: module_tool.py
router/: tools_api.py  tools_api_mcp.py  tools_front.py
templates/: index.html
tests/: test_mcp.py  test_negtive_dataset.py  test_negtive_dataset_extract_errors.py  test_recognize_intent.py  utils.py
tools/: tool_executer.py  tool_executer_impl.py  tool_executer_meeting.py  tool_llm.py  tool_processor_impl.py  tool_prompts.py  tool_template_utils.py
