[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# 明确指定只包含oddagent包，而不是自动发现所有包
packages = oddagent
include_package_data = True
package_dir =
    = .

[options.package_data]
# 包含oddagent包下的所有文件，包括子目录
oddagent = **/*.py, **/*.json, **/*.md, **/*.txt, **/*.html, **/*.css, **/*.js, **/*.png, **/*.gif

[options.exclude_package_data]
# 使用正确的段名[options.exclude_package_data]
# 所有排除规则合并到一个键下
* = tests/*, docs/*, venv/*, .venv/*, lora/*, charts/*, .github/*, 
     compile.py, compile.bat, compile.sh, delete_tmp.bat, 
     env*.bat, env*.sh, log/*, __pycache__/*, *.pyc, *.pyo